# osiris

./: .env.example  .env.xeample  .gitignore  AGENTS_COMPLETE_ANALYSIS.md  AGENTS_EXTRA_ANALYSIS.md  AGENTS_TRANSFORMATION_PLAN.md  AGENT_CORE_ANALYSIS.md  AGENT_FOLDER_FIX_SUMMARY.md  API_DEEP_ANALYSIS_PLAN.md  AURA_2025_RESEARCH_REPORT.md  AURA_2025_STATUS_REPORT.md  AURA_8_COMPONENTS_SUMMARY.md  AURA_ACTIVE_INFERENCE_DOCUMENTATION.md  AURA_ANALYSIS_REPORT.md  AURA_ARCHITECTURE_ANALYSIS.md  AURA_ARCHITECTURE_COMPLETE.json  AURA_CODEBASE_INDEX.json  AURA_COMPLETE_DOCUMENTATION_2025.md  AURA_COMPLETE_FIX_PLAN.md  AURA_COMPLETE_FLOW.md  AURA_COMPLETE_INDEX.json  AURA_COMPLETE_REBUILD_PLAN.md  AURA_COMPLETE_SYSTEM_TEST.py  AURA_COMPONENTS_COMPLETE.md  AURA_COMPONENT_ANALYSIS.md  AURA_DEEP_IMPROVEMENT_PLAN.md  AURA_DEPLOYMENT_GUIDE_2025.md  AURA_DPO_DOCUMENTATION.md  AURA_FINAL_ACHIEVEMENT_REPORT.md  AURA_FINAL_INDEX.md  AURA_FINAL_REAL_STATUS.md  AURA_FINAL_REPORT_2025.md  AURA_FINAL_STATUS_AND_NEXT_STEPS.md  AURA_FINAL_STATUS_REPORT_2025.md  AURA_FINAL_SYSTEM_STATUS_2025.md  AURA_FINAL_TEST.py  AURA_FIX_DOCUMENTATION.md  AURA_FIX_PROGRESS_REPORT.md  AURA_FOLDER_PROGRESS.md  AURA_IIM_VISUAL_ROADMAP.md  (+508 more)
_archive/: TRANSFORMATION_LOG.md
aura-iim/: README.md  requirements.txt  requirements_simple.txt
aura-microservices/: COMPLETE_PROJECT_ANALYSIS.md  INTEGRATION_ACTION_PLAN.md  NEXT_STEPS_STRATEGY.md  OSIRIS_INTEGRATION_ANALYSIS.md  README.md  SERVICES_SUMMARY.md  TDA_ML_INTEGRATION_2025.md  UNIFIED_ARCHITECTURE.md  demo_showcase.py  fix_integration.py  start.sh  test_all_services.py  test_integration.py  test_lnn_service.py  test_simulation.py  verify_structure.py
aura_intelligence_api/: __init__.py  config.py  core_api.py  endpoints.py  ultimate_connected_system.py  ultimate_core_api.py  ultimate_endpoints.py
benchmarks/: aura_benchmark_100_agents.py  aura_quick_benchmark.py  benchmark_results.json  test_async_batch_components.py  test_aura_fallback_2025.py  test_bio_enhanced_system.py  test_clean_demo.py  test_dashboard_validation.py  test_e2e_complete.py  test_enhanced_api.py  test_enhanced_systems.py  test_gpu_performance_optimization.py  test_max_installation.py  test_monitoring_import.py  test_phase2_optimizations.py  test_production_optimization_complete.py  test_production_vs_fake.py  test_real_fixes.py  test_real_system_status.py  test_realtime_dashboard.py  test_redis_performance.py  test_research_integration_2025.py  test_working_demo.py  test_working_real_services.py
config/: development.env  pyproject.toml  redis_performance_results.json  requirements.txt  requirements_missing.txt  test_results.json  toxiproxy-config.json
core/: requirements.txt  requirements_real.txt  test_fixed_lnn_integration.py
demos/: aura_complete_demo.py  aura_professional_demo.py  aura_real_demo.py  aura_working_demo.py  aura_working_demo_2025.py  demo_agent_failure_prevention.py  demo_edge_intelligence.py  demo_launcher.py  demo_live_aura.py  demo_pattern_detection.py  demo_research_enhanced.py  demo_simple_aura.py  launch_aura_demo.py  launch_clean_demo.py  launch_final_demo.py  run_demo.py  simple_demo.py
docs/: API_REFERENCE.md  COMPLETE_SYSTEM_ANALYSIS.md  COMPONENT_GUIDE.md  DEVELOPMENT_GUIDE.md  FINAL_REAL_STATUS.md  FINAL_SYSTEM_STATUS.md  FINAL_SYSTEM_SUMMARY.md  HONEST_SYSTEM_STATUS.md  MAX_COMPONENT_FIXES.md  REAL_SUCCESS_SUMMARY.md  REAL_SYSTEM_ANALYSIS.md  SYSTEM_ARCHITECTURE.md
documentation/: AURA_2025_ENHANCEMENT_PLAN.md  AURA_COMPLETE_INDEX.md  AURA_CORE_VISION_ANALYSIS.md  AURA_LAUNCH_PITCH_2025.md  AURA_SYSTEM_INDEX.md  CLAUDE.md  COMPLETE_AURA_ANALYSIS_2025.md  COMPLETE_AURA_DOCUMENTATION_v2.md  COMPLETE_SYSTEM_INDEX.md  CORAL_DEEP_RESEARCH_2025.md  CORAL_PRODUCTION_ARCHITECTURE.md  DEMO_README.md  DEMO_SHOWCASE.md  IMPLEMENTATION_RESEARCH_INDEX.md  PHASE1_IMPLEMENTATION_PLAN.md  PRODUCTION_AURA_2025.md  PRODUCTION_IMPLEMENTATION_COMPLETE.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  README.md  README_CLEAN.md  REAL_IMPLEMENTATION_ROADMAP.md  assssss.md  chathiss.md  imp.md  lllllllll.md  nolook.md  nowlookatthis.md  othergantchat.md  pashe3.md  q-dev-chat-2025-08-16.md  rdgghhjj.md  readmev1.md  readthis.md
examples/: real_demo.py
frontend/: package.json
grafana_dashboards/: adapter_performance.json  agent_activity.json  gpu_monitoring.json  main.json  system_health.json
infrastructure/: start_local_infrastructure.sh  start_services.sh
k8s/: aura-deployment.yaml  configmap.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  redis-deployment.yaml  secrets.yaml  storage.yaml
monitoring/: business-metrics-dashboard.py  grafana-dashboard.json  real_time_dashboard.py
osiris_new/: pyvenv.cfg
real_aura/: README.md  requirements.txt  run.sh  test_real_system.py
scripts/: README.md  deploy-production.sh  gpu-benchmark.sh  integrate_knowledge_graph.py  load-test.sh  local-development.sh  monitor-system.sh  test_a2a_mcp.py
test_benchmark_results/: full_pipeline_20250827_144715.json  memory_operations_20250827_144712.json  swarm_coordination_20250827_144714.json
test_reports/: ultimate_test_report_20250814_220810.html  ultimate_test_report_20250814_220810.json
tests/: integration_test.py  test_a2a_communication.py  test_clean_architecture.py  test_comprehensive_integration.py  test_integration.py  test_integration_comprehensive.py  test_tda_backbone.py  (+4 more)
(+1134 files in other folders)
